fix overflow

--- a/packages/client/src/modules/matching/pages/matched-user-page/matched-user-page.component.scss
+++ b/packages/client/src/modules/matching/pages/matched-user-page/matched-user-page.component.scss
@@ -17,11 +17,11 @@
 
     &__header {
         &__title {
-            font-size: 1.5em;
+            font-size: 1.4em;
             font-weight: 500;
             color: var(--theme-background-contrast);
             display: flex;
-            justify-content: center;
+            justify-content: left;
             align-items: center;
             gap: 12px;
 
